<?xml version="1.0"?>
<package format="3">
  <name>turtlesim_pde4430</name>
  <version>0.0.0</version>
  <description>TurtleSim exercises for PDE4430</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
